# BrilliantCutHaskell

./: BrilliantCutHaskell.cabal  ChangeLog.md  LICENSE  README.md
app/: Main.hs
src/: BrilliantCut.hs  Main.hs  diamond.json  input.json
src/main/: Main.hs
test/: Spec.hs  Tests.hs
