name:                BrilliantCutHaskell
version:             0.1.0.0
synopsis:            Wunderdog's Brilliant Cut programming task
build-type:          Simple
cabal-version:       >=1.10

executable BrilliantCutHaskell
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, bytestring, unordered-containers, aeson
