name:                brilliant-cut
version:             0.1.0.0
synopsis:            Wunderdog's Brilliant Cut programming task
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, bytestring, unordered-containers, aeson
  hs-source-dirs:      src
  Exposed-modules:     BrilliantCut

executable main
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, bytestring, brilliant-cut
  hs-source-dirs:      app
  main-is:             Main.hs

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, bytestring, HUnit, hspec, brilliant-cut
  hs-source-dirs:      test
  main-is:             Tests.hs
